<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"my first android app "</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sex">性别：</string>
    <string name="edt_sex_hint">(输入性别)</string>
    <string name="age">年龄：</string>
    <string name="edt_age_hint">(输入年龄)</string>
    <string name="OK">确定</string>
	<string name="sug_not_hurry">还不急.</string>
	<string name="sug_get_married">赶紧结婚!!!</string>
	<string name="sug_find_couple">开始找对象.</string>
	<string name="sex_male">男</string>
	<string name="result">建议:</string>
	<string name="male">男生 </string>
	<string name="female">女生</string>	
	<string name="male_age_range1">小于28岁</string>
	<string name="male_age_range2">28~33岁 </string>
	<string name="male_age_range3">大于33岁 </string>
	<string name="female_age_range1">小于25岁</string>
	<string name="female_age_range2">25~30岁</string>
	<string name="female_age_range3">大于30岁</string>
	
</resources>
