<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstandroidapp.MainActivity" >
<TableRow> 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="25sp" />

    <RadioGroup
        android:id ="@+id/radGrpSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@+id/radBtnMale">
        
        <RadioButton
           android:id="@+id/radBtnMale"   
           android:textSize="20sp"
           android:text="@string/male"/> 
           
        <RadioButton
           android:id="@+id/radBtnFemale"   
           android:textSize="20sp"
           android:text="@string/female"/> 

    </RadioGroup>
</TableRow>
    
 <!--    <EditText
        android:id="@+id/edtSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt_sex_hint" >

        <requestFocus />
    </EditText>--> 
<TableRow> 
    

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="25sp" />

    
        <RadioGroup
        android:id ="@+id/radGrpAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@+id/radBtnAgeRange1">
        
        <RadioButton
           android:id="@+id/radBtnAgeRange1"   
           android:textSize="20sp"
           android:text="@string/male_age_range1"/> 
           
        <RadioButton
           android:id="@+id/radBtnAgeRange2"   
           android:textSize="20sp"
           android:text="@string/male_age_range2"/> 
           
         <RadioButton
           android:id="@+id/radBtnAgeRange3"   
           android:textSize="20sp"
           android:text="@string/male_age_range3"/> 
        

    </RadioGroup>
</TableRow>     
        
  <!--   <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt_age_hint"
        android:inputType="number" /> -->

    <TextView
        android:id="@+id/txtR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/OK" />

</TableLayout>